# ImageCompressCpp

./: .gitignore  CMakeLists.txt  README.md  build_all.sh  build_linux_debug.sh  build_linux_release.sh  build_win_release.sh  treefile  windows-toolchain.cmake
build-linux-debug/: CMakeCache.txt  ImageCompress  Makefile  cmake_install.cmake
build-linux-release/: CMakeCache.txt  ImageCompress  Makefile  cmake_install.cmake
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: arg_helper.h  file_helpers.h  image_processor.h  stb_image_resize2.h
src/: arg_helper.cpp  file_helpers.cpp  image_processor.cpp  main.cpp
